# MPS-FQE

./: .coveragerc  .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: README
docs/source/: conf.py  hamiltonian.rst  index.rst  modules.rst  wavefunction.rst
examples/: N2_asp.py  N2_imag.py  README.md  adapt.py  adapt_vqe.py  fqe_to_mps.py  hydrogen_sheet.py
mps_fqe/: hamiltonian.py  utils.py  wavefunction.py
tests/: __init__.py  ham_test.py  test.py  test_H_ring.py  test_block2_rdm.py  test_cached.py  test_compression.py  test_hamiltonians.py  test_rdm.py  test_tddmrg.py  test_utils.py  test_wavefunction.py
