[project]
name = "mps_fqe"
description = "MPS backend for Openfermion-FQE"
version = "0.0.0"
authors = [ { name = "QSimulate" } ]

dependencies = [
    "fqe",
    "pyblock3",
]

[project.optional-dependencies]
dev = [
    "openfermionpyscf",
    "mypy",
    "black",
    "flakeheaven",
    "pylsp-mypy"
]

[tool.flakeheaven]
max_line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']

[[tool.mypy.overrides]]
module = [
    "fqe",
    "pyblock3.algebra.mps",
    "pyblock3.algebra.symmetry",
    "pyblock3.algebra.flat"
]

ignore_missing_imports = true
