[project]
name = "mps_fqe"
description = "MPS backend for Openfermion-FQE"
version = "0.0.0"
authors = [ { name = "QSimulate" } ]

dependencies = [
    "fqe>=0.3.0",
    "block2>=0.5.2",
    "pyblock3>=0.2.9rc3"
]

[project.optional-dependencies]
dev = [
    "openfermion",
    "openfermionpyscf",
    "mypy",
    "pytest",
    "black",
    "flakeheaven",
    "pylsp",
    "pylsp-mypy",
]

[tool.flakeheaven]
max_line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']

[tool.pytest.ini_options]

filterwarnings = ["ignore:Please Use `OptimizeResult`.*:DeprecationWarning"]

[[tool.mypy.overrides]]
module = [
    "fqe.*",
    "pyblock2.*",
    "pyblock3.*",
    "openfermion.*",
    "openfermionpyscf",
]

ignore_missing_imports = true